[gd_scene load_steps=3 format=3 uid="uid://8y216guxyi22"]

[ext_resource type="Theme" uid="uid://1y2gauj0n4a3" path="res://ui/combat/combat_tile_info/tile_info_theme.tres" id="1_ryv44"]
[ext_resource type="Script" path="res://ui/combat/combat_tile_info/combat_tile_info.gd" id="2_qy013"]

[node name="combat_tile_info" type="VBoxContainer"]
custom_minimum_size = Vector2(250, 80)
offset_right = 250.0
offset_bottom = 80.0
mouse_filter = 2
theme = ExtResource("1_ryv44")
theme_override_constants/separation = 0
script = ExtResource("2_qy013")

[node name="TerrainInfoContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
theme_override_constants/separation = 1

[node name="UpperTilePanel" type="Panel" parent="TerrainInfoContainer"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_vertical = 3

[node name="Tile_Index" type="Label" parent="TerrainInfoContainer/UpperTilePanel"]
custom_minimum_size = Vector2(20, 12)
layout_mode = 2
offset_left = 193.0
offset_top = 20.0
offset_right = 248.0
offset_bottom = 36.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "1,2"
horizontal_alignment = 2
vertical_alignment = 1

[node name="UpperTileContainer" type="MarginContainer" parent="TerrainInfoContainer/UpperTilePanel"]
layout_mode = 2
offset_right = 182.0
offset_bottom = 40.0
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 11
theme_override_constants/margin_bottom = 6

[node name="TerrainName" type="Label" parent="TerrainInfoContainer/UpperTilePanel/UpperTileContainer"]
custom_minimum_size = Vector2(150, 24)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Terrain Name"
vertical_alignment = 1

[node name="TerrainBonusAvoid" type="Panel" parent="TerrainInfoContainer"]
visible = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="LowerBonusContainer" type="MarginContainer" parent="TerrainInfoContainer/TerrainBonusAvoid"]
layout_mode = 2
offset_right = 150.0
offset_bottom = 30.0
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TerrainInfoContainer/TerrainBonusAvoid/LowerBonusContainer"]
layout_mode = 2

[node name="Value" type="Label" parent="TerrainInfoContainer/TerrainBonusAvoid/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "+ 15"
vertical_alignment = 1

[node name="Label" type="Label" parent="TerrainInfoContainer/TerrainBonusAvoid/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "Avoid"
vertical_alignment = 1

[node name="TerrainBonusDefense" type="Panel" parent="TerrainInfoContainer"]
visible = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="LowerBonusContainer" type="MarginContainer" parent="TerrainInfoContainer/TerrainBonusDefense"]
layout_mode = 2
offset_right = 150.0
offset_bottom = 30.0
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TerrainInfoContainer/TerrainBonusDefense/LowerBonusContainer"]
layout_mode = 2

[node name="Value" type="Label" parent="TerrainInfoContainer/TerrainBonusDefense/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "+ 15"
vertical_alignment = 1

[node name="Label" type="Label" parent="TerrainInfoContainer/TerrainBonusDefense/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "Defense"
vertical_alignment = 1

[node name="TerrainBonusResistance" type="Panel" parent="TerrainInfoContainer"]
visible = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="LowerBonusContainer" type="MarginContainer" parent="TerrainInfoContainer/TerrainBonusResistance"]
layout_mode = 2
offset_right = 150.0
offset_bottom = 30.0
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TerrainInfoContainer/TerrainBonusResistance/LowerBonusContainer"]
layout_mode = 2

[node name="Value" type="Label" parent="TerrainInfoContainer/TerrainBonusResistance/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "+ 15"
vertical_alignment = 1

[node name="Label" type="Label" parent="TerrainInfoContainer/TerrainBonusResistance/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "Resistance"
vertical_alignment = 1

[node name="TerrainBonusEffect" type="Panel" parent="TerrainInfoContainer"]
visible = false
custom_minimum_size = Vector2(150, 30)
layout_mode = 2
size_flags_horizontal = 0

[node name="LowerBonusContainer" type="MarginContainer" parent="TerrainInfoContainer/TerrainBonusEffect"]
layout_mode = 2
offset_right = 150.0
offset_bottom = 30.0
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TerrainInfoContainer/TerrainBonusEffect/LowerBonusContainer"]
layout_mode = 2

[node name="Prefix" type="Label" parent="TerrainInfoContainer/TerrainBonusEffect/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "+"
vertical_alignment = 1

[node name="Value" type="Label" parent="TerrainInfoContainer/TerrainBonusEffect/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "15"
vertical_alignment = 1

[node name="Label" type="Label" parent="TerrainInfoContainer/TerrainBonusEffect/LowerBonusContainer/HBoxContainer"]
layout_mode = 2
text = "Health"
vertical_alignment = 1

[node name="EntityInfoPanel" type="Panel" parent="TerrainInfoContainer"]
custom_minimum_size = Vector2(250, 40)
layout_mode = 2
size_flags_horizontal = 0

[node name="EntityHP" type="Label" parent="TerrainInfoContainer/EntityInfoPanel"]
visible = false
layout_mode = 2
offset_left = 209.0
offset_top = 6.0
offset_right = 246.0
offset_bottom = 21.0
theme_override_font_sizes/font_size = 12
text = "Hp 10"
horizontal_alignment = 2
vertical_alignment = 2

[node name="LowerBonusContainer" type="MarginContainer" parent="TerrainInfoContainer/EntityInfoPanel"]
layout_mode = 2
offset_right = 250.0
offset_bottom = 40.0
theme_override_constants/margin_left = 11
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 6

[node name="EntityName" type="Label" parent="TerrainInfoContainer/EntityInfoPanel/LowerBonusContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Entity Name
"
vertical_alignment = 1
